fwng: doh :) I made a slight layout issue there on the navbar

--- a/frugalware/fwng.css
+++ b/frugalware/fwng.css
@@ -27,7 +27,6 @@ div#nav {
 	height: 19px;
 	padding: 0;
 	padding-top: 3px;
-	padding-left: 5px;
 	margin: 0;
 	margin-top: 5px;
 	margin-bottom: 6px;
